--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body>
+    <header>
+      <%= render 'layouts/nav' %>
+    </header>
+    
     <%= yield %>
   </body>
 </html>
