--- a/app/views/author/articles/index.html.erb
+++ b/app/views/author/articles/index.html.erb
@@ -24,4 +24,4 @@
   </tbody>
 </table>
 
-<%= link_to 'New Product', new_author_article_path %>
+<%= link_to 'Create New Article', new_author_article_path %>
