--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -7,11 +7,16 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <%= link_to 'Home', root_path, class:'nav-link' %>
-      <%= link_to 'Author Articles', author_articles_path, class:'nav-link' %>
       <%= link_to 'Articles', articles_path, class:'nav-link' %>
+      <% if user_signed_in? %>
+      <%  if current_user.is_author? %>
+      <%= link_to 'Author Articles', author_articles_path, class:'nav-link' %>
+      <% end %>
       <%= link_to 'Log Out', destroy_user_session_path, method: :delete, class:'nav-link' %>
+      <% else %>
       <%= link_to 'Log In', new_user_session_path, class:'nav-link' %>
       <%= link_to 'Sign Up',  new_user_registration_path, class:'nav-link' %>
+      <% end %>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
