Added design to the Article Show Pahe

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,4 +8,9 @@
   <strong>Description:</strong>
   <%= article.body %>
 </p>
+
+<p>
+	<strong>Written by:</strong>
+	<%= article.author.name %>
+</p>
 <% end %>
