--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,22 +2,15 @@
 
 <h1>Articles</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Body</th>
-      <th></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @articles.each do |article| %>
-      <tr>
-        <td><%= article.title %></td>
-        <td><%= article.body %></td>
-        <td><%= link_to 'Show', article %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<% @articles.each.each do |article| %>
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title"><%= article.title %></h5>
+    <h6 class="card-subtitle mb-2 text-muted"><%= article.author.name %></h6>
+    <p class="card-text"><%= article.body %></p>
+    <a href="#" class="card-link"><%= article.author.name %></a>
+    <a href="#" class="card-link"><%= link_to 'Show', article %></a>
+  </div>
+</div>
+<% end %>
