--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,8 +1,20 @@
-<h1>Hi!</h1>
+<div class="container">
+<div class="jumbotron">
+  <h1 class="display-4">Welcome <%= current_user.name %> To The Article Library</h1>
+  <p class="lead">Find The Author You Like, Find As Many Articles you can!</p>
+  <hr class="my-4">
+</div>
 
 <p>This is the list of authors:</p>
-<% User.all.each do |s| %>
-<% if s.is_author? %>
-<%= link_to s.name, s %> 
+<ul class="list-group">
+	<% User.all.each do |s| %>
+	<% if s.is_author? %>
+	<li class="list-group-item d-flex justify-content-between align-items-center">
+<%= link_to s.name, s, class:'text-success' %> 
+<span class="badge badge-primary badge-pill"><%= s.articles.count %></span>
+</li>
 <% end %>
-<% end %>
+  <% end %>
+</ul>
+
+</div>
