--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,10 @@
  */
 
  @import 'bootstrap/scss/bootstrap';
+
+ .show {
+ 	margin-left: 25%;
+ 	margin-top: 10%;
+ 	width: 500px;
+ 	height: 500px;
+ }
