--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,7 +11,7 @@
     <h5 class="card-title"><%= article.title %></h5>
     <h6 class="card-subtitle mb-2 text-muted"><%= article.author.name %></h6>
     <p class="card-text"><%= article.body %></p>
-    <a href="#" class="card-link"><%= link_to article.author.name, article.author %></a>&nbsp;
+    <a href="#" class="card-link"><%= link_to article.author.name, user_path(article.author) %></a>&nbsp;
     <a href="#" class="card-link"><%= link_to 'Show', article %></a>
   </div>
 </div>
