--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -18,9 +18,10 @@
       <%= link_to 'Sign Up',  new_user_registration_path, class:'nav-link' %>
       <% end %>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    
+      <div class="d-flex float-end">
+        <%= if_user_logged_in %>
+      </div>
+    
   </div>
 </nav>
