Separated logic from views

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,4 @@
 <div class="container">
-<h1>Articles that you liked:</h1>
-<% current_user.likes.each do |f| %>
-<%= link_to f.article.title, f.article %><br>
-<% end %>
+<h1>Articles that you liked:</h1><br>
+<% user_like(current_user) %>
 </div>
