--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,20 +3,6 @@
 <h1 class="text-center">Articles</h1><br>
 
 <div class="row">
-	
-<% @articles.each.each do |article| %>
-<div class="col">
-<div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class="card-title"><%= article.title %></h5>
-    <h6 class="card-subtitle mb-2 text-muted"><%= article.author.name %></h6>
-    <p class="card-text"><%= article.body %></p>
-    <a href="#" class="card-link"><%= link_to article.author.name, user_path(article.author) %></a>&nbsp;
-    <a href="#" class="card-link"><%= link_to 'Show', article %></a>
-  </div>
-</div>
-</div>
-<% end %>
-
+<% articles_at(@articles) %>
 </div>
 </div>
