--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -4,17 +4,9 @@
   <p class="lead">Find The Author You Like, Find As Many Articles you can!</p>
   <hr class="my-4">
 </div>
-
 <p>This is the list of authors:</p>
 <ul class="list-group">
-	<% User.all.each do |s| %>
-	<% if s.is_author? %>
-	<li class="list-group-item d-flex justify-content-between align-items-center">
-<%= link_to s.name, s, class:'text-success' %> 
-<span class="badge badge-primary badge-pill"><%= s.articles.count %></span>
-</li>
-<% end %>
-  <% end %>
+  <% home_author %>
 </ul>
 
 </div>
