--- a/app/views/articles/_show_art.html.erb
+++ b/app/views/articles/_show_art.html.erb
@@ -7,5 +7,5 @@
     <a href="#" class="card-link"><%= link_to x.author.name, user_path(x.author) %></a>&nbsp;
     <a href="#" class="card-link"><%= link_to 'Show', x %></a>
   </div>
-</div>
+</div><br>
 </div>
