--- a/app/views/author/articles/index.html.erb
+++ b/app/views/author/articles/index.html.erb
@@ -24,7 +24,7 @@
     <a href="#" class="card-link"><%= link_to 'Delete', author_article_path(article), method: :delete %></a>
     <% end %>
   </div>
-</div>
+</div><br>
 </div>
 <% end %>
 </div>
