--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
 <div class="container">
-<h1>Articles that you liked:</h1><br>
-<% user_like(current_user) %>
+	<h1>Articles that you liked:</h1><br>
+	<% user_like(current_user) %><br>
 </div>
